--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
 ---
-layout: index
+layout: page
 title: Home
+permalink: /
 ---
+
+I am a second-year undergrad in the Double-Majeure Physique-Mathématiques (DM PM) program at Sorbonne Université. 
+My research interests lie in the mathematical structures related to theoretical physics.
+
+---
+
+Here you can find:
+ - [My Curriculum Vit&aelig;]({{ "/curriculum_vitae" | relative_url }}),
+ - [My Research Experience]({{ "/research" | relative_url }}),
+ - [My Activities]({{ "/activities" | relative_url }}),
+ - [Languages I am interested in]({{ "/languages" | relative_url }}), and
+ - [Miscellaneous Content]({{ "/miscellaneous" | relative_url }}).
