--- a/index.html
+++ b/index.html
@@ -3,14 +3,30 @@ layout: page
 title: Home
 ---
 
-I am a second-year undergrad in the Double-Majeure Physique-Mathématiques (DM PM) program at Sorbonne Université. 
-My research interests lie in the mathematical structures related to theoretical physics.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+</head>
+<body>
 
----
+<h1>Home</h1>
 
-Here you can find:
- - [My Curriculum Vit&aelig;]({{ "/curriculum_vitae" | relative_url }}),
- - [My Research Experience]({{ "/research" | relative_url }}),
- - [My Activities]({{ "/activities" | relative_url }}),
- - [Languages I am interested in]({{ "/languages" | relative_url }}), and
- - [Miscellaneous Content]({{ "/miscellaneous" | relative_url }}).
+<p>
+    Hi! I am a second-year undergrad in the Double-Majeure Physique-Mathématiques (DM PM) program at Sorbonne Université. 
+    My research interests lie in the mathematical structures related to theoretical physics.
+</p>
+
+<hr>
+
+<h2>Contact</h2>
+<p>
+    📧 <a href="mailto:yiyi.wan@universite-paris-saclay.fr">yiyi.wan@universite-paris-saclay.fr</a> <br>
+    📧 <a href="mailto:yiyi.wan@etu.sorbonne-universite.fr">yiyi.wan@etu.sorbonne-universite.fr</a>
+</p>
+
+
+</body>
+</html>
