--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ title: Home
 </head>
 <body>
 
-<h1>Home</h1>
+<h1> </h1>
 
 <p>
     Hi! I am a second-year undergrad in the Double-Majeure Physique-Mathématiques (DM PM) program at Sorbonne Université. 
-    My research interests lie in the mathematical structures related to theoretical physics.
+    I love mathematics, physics, and philosophy—or rather, σοφία, in its broadest sense.
 </p>
 
 <hr>
