--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@ title: Home
     I love mathematics, physics, and philosophy—or rather, σοφία, in its broadest sense.
 </p>
 
+<p>
+    Bonjour ! Je suis étudiant en deuxième année du programme Double-Majeure Physique-Mathématiques (DM PM) à Sorbonne Université. 
+    J’aime les mathématiques, la physique et la philosophie — ou plutôt la σοφία, dans son sens le plus large.
+</p>
+
 <hr>
 
 <h2>Contact</h2>
