--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@ title: Home
 
 <p>
     Hi! I am a second-year undergrad in the Double-Majeure Physique-Mathématiques (DM PM) program at Sorbonne Université. 
-    I love mathematics, physics, and philosophy—or rather, σοφία, in its broadest sense.
+    I love mathematics, physics, and philosophy—or rather, <i>σοφία</i>, in its broadest sense.
 </p>
 
 <p>
     Bonjour ! Je suis étudiant en deuxième année du programme Double-Majeure Physique-Mathématiques (DM PM) à Sorbonne Université. 
-    J’aime les mathématiques, la physique et la philosophie — ou plutôt la σοφία, dans son sens le plus large.
+    J’aime les mathématiques, la physique et la philosophie — ou plutôt la <i>σοφία</i>, dans son sens le plus large.
 </p>
 
 <hr>
