--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@ title: Home
 <h1> </h1>
 
 <p>
+    A heart driven by physics, a mind shaped by mathematics, Das Sein schweigt in der Philosophie.
+<p>
+
+<p>
     Hi! I am a second-year undergrad in the Double-Majeure Physique-Mathématiques (DM PM) program at Sorbonne Université. 
     I love mathematics, physics, and philosophy—or rather, <i>σοφία</i>, in its broadest sense.
 </p>
