--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@ title: Home
 <h1> </h1>
 
 <p>
-    Hi! I am a second-year undergrad in the Double-Majeure Physique-Mathématiques (DM PM) program at Sorbonne Université. 
-    I love mathematics, physics, and philosophy—or rather, <i>σοφία</i>, in its broadest sense.
+    Hi! I am a second-year undergraduate in the <em>Double Major in Physics and Mathematics (DM PM)</em> program at <em>Sorbonne University</em>. 
+    A heart driven by physics, a mind shaped by mathematics, Das Sein schweigt in der Philosophie.
 </p>
 
 <p>
-    Bonjour ! Je suis étudiant en deuxième année du programme Double-Majeure Physique-Mathématiques (DM PM) à Sorbonne Université. 
-    J’aime les mathématiques, la physique et la philosophie — ou plutôt la <i>σοφία</i>, dans son sens le plus large.
+    Bonjour ! Je suis étudiant en deuxième année du programme <em>Double-Majeure Physique-Mathématiques (DM PM)</em> à <em>Sorbonne Université</em>. 
+    J’aime les mathématiques, la physique et la philosophie — ou plutôt la <i>σοφία</i>, dans le sens le plus large.
 </p>
 
 <hr>
