--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Home
 </p>
 
 <p>
-    Bonjour ! Je suis étudiant en deuxième année du programme <em>Double-Majeure Physique-Mathématiques (DM PM)</em> à <em>Sorbonne Université</em>. 
+    Bonjour ! Je suis étudiant en L2 du programme <em>Double-Majeure Physique-Mathématiques (DM PM)</em> à <em>Sorbonne Université</em>. 
     J’aime les mathématiques, la physique et la philosophie — ou plutôt la <i>σοφία</i>, dans le sens le plus large.
 </p>
 
