--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@ title: Home
 <h1> </h1>
 
 <p>
-    Hi! I am a second-year undergraduate in the <em>Double Major in Physics and Mathematics (DM PM)</em> program at <em>Sorbonne University</em>. 
+    Hi! I am a second-year undergraduate at <em>Sorbonne University</em>. 
     A heart driven by physics, a mind shaped by mathematics, Das Sein schweigt in der Philosophie.
 </p>
 
 <p>
-    Bonjour ! Je suis étudiant en L2 du programme <em>Double-Majeure Physique-Mathématiques (DM PM)</em> à <em>Sorbonne Université</em>. 
+    Bonjour ! Je suis étudiant en L2 à <em>Sorbonne Université</em>. 
     J’aime les mathématiques, la physique et la philosophie — ou plutôt la <i>σοφία</i>, dans le sens le plus large.
 </p>
 
